--- a/public/css/adaptive/aGeneral.css
+++ b/public/css/adaptive/aGeneral.css
@@ -7,7 +7,7 @@
 @media only screen and (max-width:1305px){
     .header{
         align-items: flex-start;
-        padding-top: 43px;
+        padding: 43px 5% 0 5%;
     }
 
     .navbar, .search{
