--- a/public/css/general.css
+++ b/public/css/general.css
@@ -56,7 +56,7 @@ body{
 
 .search img, .hiddenSearch img{
     padding: 8px;
-    background-color: mediumturquoise;
+    background-color: rgb(0, 137, 123);;
     cursor: pointer;
     border: solid 1px black
 }
@@ -104,4 +104,14 @@ body{
 @font-face {
     font-family: OpenSans-SemiBold;
     src: url(../fonts/opensans/OpenSans-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: OpenSans-Regular;
+    src: url(../fonts/opensans/OpenSans-Regular.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Bold;
+    src: url(../fonts/roboto/Roboto-Bold.ttf);
 }
