--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,11 @@
+/* WEB DEVELOPMENT----------------------------------------- */
 .webDevelopment{
     width: 100%;
     height: 655px;
     background-size: cover;
     background-position: bottom;
-    background-image: url(../image/main/WebDevelopment.jpg);
+    background-image: url(../image/main/WebDevelopment/WebDevelopment.jpg);
+    background-color: black;
     padding-top: 185px;
 }
 
@@ -71,7 +73,80 @@
 .webDevelopment .arrow{
     width: 23px;
     height: 15px;
-    background-image: url(../image/main/arrow.png);
+    background-image: url(../image/main/WebDevelopment/arrow.png);
     margin: auto;
     cursor: pointer;
+}
+/* -------------------------------------------------- */
+.aboutUs{
+    width: 100%;
+    height: 655px;
+    background-color: white;
+    padding-top: 125px;
+}
+
+.aboutUs .title{
+    text-align: center;
+}
+
+.aboutUs span{
+    display: block;
+}
+
+.aboutUs .title span:nth-child(1){
+    font-size: 30px;
+    font-family: OpenSans-Bold;
+    margin-bottom: 30px;
+}
+
+.aboutUs .title span:nth-child(2){
+    font-size: 15px;
+    font-family: OpenSans-Regular;
+    width: 630px;
+    margin:auto;
+    margin-bottom: 125px;
+}
+
+.aboutUs .cardContainer{
+    display: flex;
+    justify-content: center;
+}
+
+.aboutUs .card{
+    width: 250px;
+    height: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 140px;
+}
+
+.aboutUs .card:first-child{
+    margin-left: 20px;
+}
+
+.aboutUs .card:last-child{
+    margin-right: 20px;
+}
+
+.aboutUs .card img{
+    width: 65px;
+    height: 65px;
+    margin-bottom: 30px;
+}
+
+.aboutUs .card span{
+    display: block;
+}
+
+.aboutUs .card span:nth-child(2){
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-family: OpenSans-SemiBold;
+}
+
+.aboutUs .card span:nth-child(3){
+    font-size: 15px;
+    font-family: OpenSans-Regular;
 }
