--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,17 +14,17 @@
     margin-bottom: 110px;
 }
 
-.webDevelopment span{
+.webDevelopment .title span{
     display: block;
     color: white;
 }
 
-.webDevelopment span:nth-child(1){
+.webDevelopment .title span:nth-child(1){
     font-size: 60px;
     font-family: OpenSans-Bold;
 }
 
-.webDevelopment span:nth-child(2){
+.webDevelopment .title span:nth-child(2){
     font-size: 22px;
     font-family: OpenSans-Regular;
 }
@@ -154,7 +154,7 @@
 .ourServices{
     width: 100%;
     background-color: rgb(228, 253,249);
-    padding: 175px 115px 0 115px;
+    padding: 125px 115px 95px 115px;
 }
 
 .ourServices span{
@@ -242,4 +242,98 @@
     transition: border ease 1s;
     border: solid 3px white
 }
-/* ------------------------------------------------------------- */
+/* Lastest Work------------------------------------------------------------- */
+.lastestWork{
+    padding: 125px 115px 95px 115px;
+    background-color: white;
+}
+
+.lastestWork .title span{
+    display: block;
+    margin: auto;
+}
+
+.lastestWork .title span:nth-child(1){
+    width: 210px;
+    font-size: 30px;
+    font-family: OpenSans-Bold;
+    margin-bottom: 35px;
+}
+
+.lastestWork .title span:nth-child(2){
+    width: 630px;
+    font-size: 15px;
+    font-family: OpenSans-Regular;
+    margin-bottom: 115px;
+    text-align: center;
+}
+
+.lastestWork .buttonContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 120px;
+}
+
+.lastestWork .buttonContainer .button{
+    height: 55px;
+    line-height: 55px;
+    padding: 0 20px 0 20px;
+    margin-right: 20px;
+    border: solid 3px rgb(0, 137, 123);
+    font-size: 20px;
+    font-family: OpenSans-SemiBold;
+    cursor: pointer;
+}
+
+.lastestWork .buttonContainer .button:hover{
+    background-color: rgb(0, 137, 123);
+    color: white;
+}
+
+.lastestWork .buttonContainer .button:last-child{
+    margin-right: 0;   
+}
+
+.lastestWork .goods .cardContainer{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 370px 370px 370px;
+    column-gap: 30px;
+}
+
+.lastestWork .cardContainer .card{
+    width: 370px;
+    height: 370px;
+    background-image: url(../image/goods/1.png);
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 30px;
+    animation: blinker 1s linear;
+}
+  
+@keyframes blinker {
+    0% {
+      opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.lastestWork .card .description{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.lastestWork .card .description:hover{
+    opacity: 1;
+}
