--- a/public/css/general.css
+++ b/public/css/general.css
@@ -116,6 +116,11 @@ body{
 }
 
 @font-face {
+    font-family: OpenSans-Light;
+    src: url(../fonts/opensans/OpenSans-Light.ttf);
+}
+
+@font-face {
     font-family: Roboto-Bold;
     src: url(../fonts/roboto/Roboto-Bold.ttf);
 }
