--- a/public/css/main.css
+++ b/public/css/main.css
@@ -337,3 +337,140 @@
 .lastestWork .card .description:hover{
     opacity: 1;
 }
+/* Pricing Plan------------------------------------------------------------- */
+.pricingPlan{
+    width: 100%;
+    padding: 125px 115px 125px 115px;
+    background-color: rgb(240, 241, 241);
+}
+
+.pricingPlan .title span{
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
+.pricingPlan .title span:nth-child(1){
+    width: 210px;
+    font-size: 30px;
+    font-family: OpenSans-Bold;
+    margin-bottom: 35px;
+}
+
+
+.pricingPlan .title span:nth-child(2){
+    width: 630px;
+    font-size: 15px;
+    font-family: OpenSans-Regular;
+    margin-bottom: 125px;
+}
+
+.pricingPlan .cardContainer{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 370px 370px 370px;
+    column-gap: 30px;
+}
+
+.pricingPlan .cardContainer .card{
+    width: 370px;
+    height: 670px;
+    background-color: white;
+    margin-bottom: 30px;
+}
+
+.pricingPlan .card .cardHeader{
+    padding: 50px 0 0 0;
+    width: 100%;
+    height: 210px;
+    background-image: url(../image/main/cardHeader.png);
+    background-size: cover;
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.pricingPlan .card .cardHeader span{
+    font-family: OpenSans-Regular;
+    color: white;
+    font-size: 25px;
+}
+
+.pricingPlan .card .cardHeader span:nth-child(1){
+    display: block;
+}
+
+.pricingPlan .card .cardHeader .price span:nth-child(1){
+    display: inline;
+    margin: 0;
+}
+
+.pricingPlan .card .cardHeader .price span:nth-child(1){
+    display: inline;
+    margin: 0;
+    position: relative;
+    bottom: 20px;
+}
+
+.pricingPlan .card .cardHeader .price span:nth-child(2){
+    font-size: 50px;
+}
+
+.pricingPlan .card .cardHeader .price span:nth-child(3){
+    font-size: 17px;
+}
+
+.pricingPlan .card .cardContent span{
+    display: block;
+    width: 180px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-family: OpenSans-Light;
+    font-size: 17px;
+    border-bottom: solid 2px rgb(191, 191, 191);
+    margin: auto;
+    margin-bottom: 25px;
+}
+
+.pricingPlan .card .cardContent span:nth-child(4){
+    margin-bottom: 65px;
+}
+
+.pricingPlan .card .cardContent .button{
+    border: solid 3px black;
+    width: 180px;
+    height: 60px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: OpenSans-SemiBold;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.pricingPlan .cardContainer .card:hover{
+    position: relative;
+    animation: flow 0.5s linear alternate;
+    animation-fill-mode: forwards;
+}
+
+.pricingPlan .card .cardContent .button:hover{
+    transition: all ease 1s;
+    background-color: rgb(0, 137, 123);
+    border-color: rgb(0, 137, 123);
+    color: white;  
+}
+
+
+
+@keyframes flow{
+    0% {
+        bottom: 0;
+        box-shadow: 0px 0px 0px grey;
+      }
+      100% {
+          bottom: 15px;
+          box-shadow: 10px 10px 10px grey;
+      }
+}
