--- a/public/css/main.css
+++ b/public/css/main.css
@@ -462,8 +462,6 @@
     color: white;  
 }
 
-
-
 @keyframes flow{
     0% {
         bottom: 0;
@@ -473,4 +471,139 @@
           bottom: 15px;
           box-shadow: 10px 10px 10px grey;
       }
+}
+/* Out Team--------------------------------------------------------------- */
+.ourTeam{
+    width: 100%;
+    padding: 125px 115px 125px 115px;
+    background-color: rgb(255, 255, 255);
+}
+
+.ourTeam .title span{
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
+.ourTeam .title span:nth-child(1){
+    width: 290px;
+    font-size: 30px;
+    font-family: OpenSans-Bold;
+    margin-bottom: 35px;
+}
+
+.ourTeam .title span:nth-child(2){
+    width: 630px;
+    font-size: 15px;
+    font-family: OpenSans-Regular;
+    margin-bottom: 125px;
+}
+
+.ourTeam .slider{
+    overflow: hidden;
+}
+
+.ourTeam .slider .slideContainer{
+    width: 9999px;
+    position: relative;
+    transition: left 2s ease;
+    margin-bottom: 125px;
+}
+
+.ourTeam .slideContainer .card{
+    display: inline-block;
+    margin-right: 30px;
+    width: 370px;
+    height: 500px;
+}
+
+.ourTeam .slideContainer .card img{
+    margin-bottom: 40px;
+    border-radius: 12px;
+}
+
+.ourTeam .slideContainer .card span{
+    display: block;
+    text-align: center;
+}
+
+.ourTeam .slideContainer .card span:nth-child(2){
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-family: OpenSans-SemiBold;
+}
+
+.ourTeam .slideContainer .card span:nth-child(3){
+    margin-bottom: 30px;
+    font-family: OpenSans-Regular;
+    font-size: 15px;
+}
+
+.ourTeam .slideContainer .buttonContainer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 270px;
+    margin: auto;
+}
+
+.ourTeam .slideContainer .buttonContainer div{
+    width: 50px;
+    height: 50px;
+    background-color: rgb(240, 241, 241);
+    border-radius: 10px;
+    cursor: pointer;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.ourTeam .slideContainer .buttonContainer div:hover{
+    background-color: rgb(57, 73, 171);
+}
+
+.ourTeam .slideContainer .buttonContainer div:nth-child(1){
+    background-image: url('../image/buttons/facebook.png');
+}
+.ourTeam .slideContainer .buttonContainer div:nth-child(1):hover{
+    background-image: url('../image/buttons/wFacebook.png');
+}
+
+.ourTeam .slideContainer .buttonContainer div:nth-child(2){
+    background-image: url('../image/buttons/twitter.png');
+}
+.ourTeam .slideContainer .buttonContainer div:nth-child(2):hover{
+    background-image: url('../image/buttons/wTwitter.png');
+}
+
+.ourTeam .slideContainer .buttonContainer div:nth-child(3){
+    background-image: url('../image/buttons/whatsapp.png');
+}
+.ourTeam .slideContainer .buttonContainer div:nth-child(3):hover{
+    background-image: url('../image/buttons/wWhatsapp.png');
+}
+
+.ourTeam .slideContainer .buttonContainer div:nth-child(4){
+    background-image: url('../image/buttons/planet.png');
+}
+.ourTeam .slideContainer .buttonContainer div:nth-child(4):hover{
+    background-image: url('../image/buttons/wPlanet.png');
+}
+
+.ourTeam .sliderNavig{
+    margin: auto;
+    width: 65px;
+    display: flex;
+    cursor: pointer;
+}
+
+.ourTeam .sliderNavig .button{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.ourTeam .sliderNavig .button:last-child{
+    margin-right: 0;
 }
