--- a/public/css/general.css
+++ b/public/css/general.css
@@ -8,14 +8,24 @@ span{
     cursor: default;
 }
 
-body{
-    background-color: grey;
+.background{
+    background-image: url('../image/general/background.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    overflow: scroll;
+    overflow-x:hidden;
 }
 
 .wrap{
     width: 1400px;
     min-width: 650px;
     margin: auto;
+
+    box-shadow: 0 30px 30px rgba(0, 0, 0, 1),
+                -50px 0 20px -50px rgba(0, 0, 0, .8),
+                50px 0 20px -50px rgba(0, 0, 0, .8);
 }
 
 .header{
