--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,8 +81,9 @@
 .aboutUs{
     width: 100%;
     height: 655px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.2);
     padding-top: 125px;
+    color: white;
 }
 
 .aboutUs .title{
