--- a/public/css/general.css
+++ b/public/css/general.css
@@ -28,6 +28,12 @@ span{
                 50px 0 20px -50px rgba(0, 0, 0, .8);
 }
 
+.shadow{
+    box-shadow: 0 30px 30px rgba(0, 0, 0, 1),
+    -50px 0 20px -50px rgba(0, 0, 0, .8),
+    50px 0 20px -50px rgba(0, 0, 0, .8);
+}
+
 .header{
     width: 100%;
     height: 120px;
