--- a/public/css/general.css
+++ b/public/css/general.css
@@ -38,15 +38,17 @@ span{
     width: 100%;
     height: 120px;
     padding: 0 115px;
-    background-color: rgb(255,255,255);
+    background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-image: url(../image/general/header.jpg);
+    color: white;
 }
 
 .logo{
-    font-size: 25px;
-    font-family: OpenSans-Bold;
+    font-size: 45px;
+    font-family: BeauRivage-Regular;
 }
 
 .mainMenu{
@@ -139,4 +141,9 @@ span{
 @font-face {
     font-family: Roboto-Bold;
     src: url(../fonts/roboto/Roboto-Bold.ttf);
+}
+
+@font-face {
+    font-family: BeauRivage-Regular;
+    src: url(../fonts/BeauRivage-Regular.ttf);
 }
