--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,7 +81,8 @@
 .aboutUs{
     width: 100%;
     height: 655px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: black;
+    background-image: url(../image/main/dark.jpg);
     padding-top: 125px;
     color: white;
 }
@@ -154,8 +155,10 @@
 /* OUR SERVICES-------------------------------------------------- */
 .ourServices{
     width: 100%;
-    background-color: rgb(228, 253,249);
+    background-color: black;
     padding: 125px 115px 95px 115px;
+    background-image: url(../image/main/paper.jpg);
+    color: black;
 }
 
 .ourServices span{
@@ -195,6 +198,7 @@
     justify-content: flex-start;
     align-items: center;
     padding-top: 55px;
+    color: black;
 }
 
 .ourServices .card .logo{
@@ -247,6 +251,8 @@
 .lastestWork{
     padding: 125px 115px 95px 115px;
     background-color: white;
+    background-image: url(../image/main/dark.jpg);
+    color: white;
 }
 
 .lastestWork .title span{
@@ -311,6 +317,7 @@
     background-position: center;
     margin-bottom: 30px;
     animation: blinker 1s linear;
+    border: solid 3px rgb(0, 137, 123);
 }
   
 @keyframes blinker {
@@ -342,7 +349,8 @@
 .pricingPlan{
     width: 100%;
     padding: 125px 115px 125px 115px;
-    background-color: rgb(240, 241, 241);
+    background-color: black;
+    background-image: url(../image/main/paper.jpg);
 }
 
 .pricingPlan .title span{
@@ -477,7 +485,9 @@
 .ourTeam{
     width: 100%;
     padding: 125px 115px 125px 115px;
-    background-color: rgb(255, 255, 255);
+    background-color: black;
+    background-image: url(../image/main/dark.jpg );
+    color: white;
 }
 
 .ourTeam .title span{
@@ -513,14 +523,20 @@
 
 .ourTeam .slideContainer .card{
     display: inline-block;
+    border-radius: 12px;
     margin-right: 30px;
+    padding-top: 10px;
     width: 370px;
     height: 500px;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .ourTeam .slideContainer .card img{
     margin-bottom: 40px;
     border-radius: 12px;
+    width: 95%;
+    display: block;
+    margin: auto;
 }
 
 .ourTeam .slideContainer .card span{
