--- a/public/css/main.css
+++ b/public/css/main.css
@@ -634,6 +634,7 @@
     width: 100%;
     padding: 125px 115px 125px 115px;
     background-color: rgb(240, 241, 241);
+    background-image: url(../image/main/paper.jpg);
 }
 
 .blog .title span{
@@ -661,15 +662,25 @@
     grid-template-columns: 50% 50%;
     align-content: center;
     margin-bottom: 125px;
+    align-self: center;
+    justify-self: center;
+    grid-gap: 20px;
 }
 
 .blog .adGrid .preview{
-    width: 90%;
+    width: 100%;
+    align-self: center;
+    justify-self: center;
+    border: solid 3px rgb(0, 137, 123);
+    box-shadow: 10px 10px 10px grey;
 }
 
 .blog .adGrid .description{
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    align-items: center;
+    padding: 0 30px 0 30px;
+    text-align: justify;
 }
 
 .blog .adGrid .description .title{
@@ -687,6 +698,7 @@
 .blog .adGrid .description .info{
     display: flex;
     margin-bottom: 25px;
+    flex-wrap: wrap;
 }
 
 .blog .adGrid .description .info img{
@@ -728,3 +740,4 @@
     border-color: rgb(0, 137, 123);
     color: white;  
 }
+/*---------------------------------------------------*/
