--- a/public/css/general.css
+++ b/public/css/general.css
@@ -34,7 +34,7 @@ span{
     50px 0 20px -50px rgba(0, 0, 0, .8);
 }
 
-.header{
+header{
     width: 100%;
     height: 120px;
     padding: 0 115px;
@@ -71,12 +71,17 @@ span{
 }
 
 .search input, .hiddenSearch input{
+    height: 37px;
     font-size: 20px;
     width: 200px;
     padding: 5px;
+    padding-left: 15px;
+    border-radius: 15px 0% 0% 15px;
 }
 
 .search img, .hiddenSearch img{
+    width: 37px;
+    height: 37px;
     padding: 8px;
     background-color: rgb(0, 137, 123);;
     cursor: pointer;
@@ -115,6 +120,17 @@ span{
 
 .hiddenNavig li:hover{
     background-color: dodgerblue;
+}
+
+footer{
+    width: 100%;
+    background-color: white;
+    text-align: center;
+    font-family: Roboto-Bold;
+    height: 65px;
+    line-height: 65px;
+    background-image: url(../image/general/header.jpg);
+    color: white;
 }
 
 /* ------------------------------------------------- */
