--- a/public/css/mobile/mGeneral.css
+++ b/public/css/mobile/mGeneral.css
@@ -4,7 +4,7 @@
         width: 100%;
     }
     
-    .header{
+    header{
         align-items: flex-start;
         padding: 35px 15px 0 15px;
     }
