--- a/public/css/mobile/mMain.css
+++ b/public/css/mobile/mMain.css
@@ -209,4 +209,77 @@
         width: 90%;
         margin-bottom: 90px;
     }
+    /*Contact us---------------------------------------------------*/
+    .contactUs{
+        width: 100%;
+        padding: 50px 0 50px 0;
+    }
+
+    .contactUs .title span:nth-child(1){
+        width: 90%;
+        text-align: center;
+        font-size: 35px;
+    }
+
+    .contactUs .title span:nth-child(2){
+        font-size: 20px;
+        width: 90%;
+        margin-bottom: 60px;
+    }
+
+    .contactUs .contactsInfo{
+        width: 100%;
+        margin-bottom: 80px;
+        text-align: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 20px;
+        justify-content: center;
+    }
+
+    .contactUs .contactsInfo .info{
+        width: 100%;
+    }
+
+    .contactUs .contactsInfo .icon{
+        width: 70px;
+        height: 70px;
+        margin-bottom: 0;
+    }
+
+    .contacts form{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 85px);
+        grid-row-gap: 30px;
+    }
+
+    input[type=text]{
+        width: 95%;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        justify-self: center;
+    }
+    
+    input[type=email]{
+        width: 95%;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        justify-self: center;
+    }
+    
+    textarea{
+        width: 95%;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 3;
+        grid-row-end: 5;
+        justify-self: center;
+    }
+    
+    input[type=submit]{
+        width: 95%;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        justify-self: center;
+    }
 }
